refactoring code & fix bugs

--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -26,7 +26,6 @@
     filter: drop-shadow(5px 5px 5px #777);
 }
 
-
 .buttons-container {
     display: flex;
     position: absolute;
@@ -41,8 +40,8 @@
     cursor: pointer;
 
     transition: 0.2s;
-    
 }
+
 .buttons-container button:focus {
     outline: none;
 }
@@ -50,7 +49,6 @@
 .buttons-container button:hover {
     background: var(--color-background-button)
 }
-
 
 #back-button {
     border-radius: 50% 0 0 50%; 
@@ -70,8 +68,6 @@
     align-items: center;
     justify-content: center;
     flex-flow: column wrap;
-
-    margin-top: 3rem;
 }
 
 #pattern-quote {
@@ -82,11 +78,11 @@
     margin-top: -42px;
     font: 500 1.6rem Inter;
     color: var(--color-grayish-blue1);
+    height: 6rem;
 }
 
-
 .footer-content {
-    margin-top: 2rem;
+    margin-top: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -145,6 +141,10 @@
     .buttons-container {
         bottom: 11px;
     }
+
+    .page-content {
+        margin-top: 1.2rem;
+    }
 }
 
 @media(min-width: 840px) {
@@ -162,6 +162,10 @@
 
     .buttons-container {
         bottom: -6px;
+    }
+
+    .page-content {
+        margin-top: 2rem;
     }
 }
 
@@ -191,6 +195,7 @@
     .page-content p {
         margin-top: -75px;
         font: 500 2.5rem Inter;
+        height: 340px;
     }
 
     .footer-content {
@@ -198,6 +203,7 @@
         flex-direction: row;
         justify-content: flex-start;
         width: 100%;
+        margin-top: -50px;
     }
 
     .footer-content h2 {
